# ncc

./: .gitignore  BACKLOG.md  BIG_AUDIT_1_IMPLEMENTATION_PLAN.md  BIG_AUDIT_1_LOG.md  BIG_AUDIT_1_PLAN.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  REFACTOR.md  SKYGOD_AUDIT.md  blues.html  genre.html  index.html  misc.html  mycollection.html  rock.html  server.py  style.css
frontend/: 404.html  _redirects  admin.html  album.html  index.html  landing.html  manifest.json  mycollection.html  privacy.html  profile.html  profile.html.bak  public.html  record.js  (+5 more)
tools/gcp-init/: gcp_init.py  pyproject.toml
tools/oauth-setup/: oauth_setup.py  pyproject.toml
worker/: pyproject.toml  wrangler.toml
worker/python_modules/annotated_types-0.7.0.dist-info/: RECORD
worker/python_modules/anyio-4.12.0.dist-info/: RECORD
worker/python_modules/fastapi-0.127.0.dist-info/: RECORD
worker/python_modules/httpx-0.28.1.dist-info/: METADATA  RECORD
worker/python_modules/httpx/_transports/: jsfetch.py
worker/python_modules/pydantic-2.10.6.dist-info/: RECORD
worker/python_modules/pydantic_core-2.27.2.dist-info/: RECORD  WHEEL
worker/src/: __init__.py  main.py  utils.py
worker/src/routes/: __init__.py  admin.py  auth.py  blocks.py  categories.py  category_profiles.py  chat.py  collection.py  comments.py  discogs.py  friends.py  interests.py  marketplace.py  messages.py  moderation.py  notifications.py  posts.py  profile.py  search.py  trending.py  upload.py  votes.py  wishlist.py
worker/src/services/: __init__.py  discogs.py  email.py  pokemon_tcg.py  rawg.py  scryfall.py
worker/src/utils/: __init__.py  conversions.py  rate_limit.py  scoring.py
worker/tests/: conftest.py  test_routes.py  test_utils.py
(+59 files in other folders)
