[project]
name = "gcp-init"
version = "1.0.0"
description = "Initialize Google Cloud Platform project for Vinyl Vault"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
gcp-init = "gcp_init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
